--- a/Trace_yourself_for_fun_and_profit/Makefile
+++ b/Trace_yourself_for_fun_and_profit/Makefile
@@ -5,17 +5,18 @@ CXXFLAGS := -std=c++11 -O2 -Wall -Werror
 LDFLAGS := -lcrypto
 
 EXECUTABLES := secret_application secret_application_dbgcheck secret_application_trace
+SOURCES := secret_application.cpp syscalltable.cpp
 
 all: $(EXECUTABLES)
 
-secret_application: secret_application.cpp
-	$(CXX) $(CXXFLAGS) -o $@ $< $(LDFLAGS)
+secret_application: $(SOURCES)
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS)
 
-secret_application_dbgcheck: secret_application.cpp
-	$(CXX) $(CXXFLAGS) -o $@ $< $(LDFLAGS) -DCHECK_FOR_DEBUGGER
+secret_application_dbgcheck: $(SOURCES)
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS) -DCHECK_FOR_DEBUGGER
 
-secret_application_trace: secret_application.cpp
-	$(CXX) $(CXXFLAGS) -o $@ $< $(LDFLAGS) -DPTRACE_MYSELF
+secret_application_trace: $(SOURCES)
+	$(CXX) $(CXXFLAGS) -o $@ $^ $(LDFLAGS) -DPTRACE_MYSELF
 
 clean:
 	rm -f $(EXECUTABLES) *.o
