--- a/Boost_Process/CMakeLists.txt
+++ b/Boost_Process/CMakeLists.txt
@@ -5,7 +5,7 @@
 cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
 project(boost_process VERSION 0.1 LANGUAGES CXX)
 
-set(CMAKE_BUILD_TYPE Release)
+#set(CMAKE_BUILD_TYPE Release)
 
 #
 # Build targets
