Advanced testing with GoogleTest and GoogleMock

--- a/GoogleTest_GoogleMock/CMakeLists.txt
+++ b/GoogleTest_GoogleMock/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(testdemo VERSION 1.0 LANGUAGES CXX)
 
-set(CMAKE_CXX_STANDARD 17) # just for fun
+set(CMAKE_CXX_STANDARD 20)
 
 find_package(GTest REQUIRED)
 
@@ -11,14 +11,22 @@ add_library(stringify STATIC stringify.cpp)
 enable_testing()
 add_executable(tests tests.cpp)
 # specific to my OSX setup
-target_include_directories(tests PRIVATE /opt/homebrew/include/)
-target_link_directories(tests PRIVATE /opt/homebrew/lib)
+include_directories(tests PRIVATE /opt/homebrew/include/)
 
-target_link_libraries(tests PRIVATE stringify gtest gtest_main)
+target_link_libraries(tests PRIVATE stringify GTest::gtest GTest::gtest_main)
 gtest_discover_tests(tests)
 
 add_executable(tests_with_mocks tests_with_mocks.cpp)
 target_include_directories(tests_with_mocks PRIVATE /opt/homebrew/include/)
 target_link_directories(tests_with_mocks PRIVATE /opt/homebrew/lib)
-target_link_libraries(tests_with_mocks PRIVATE stringify gtest gtest_main gmock)
+target_link_libraries(tests_with_mocks PRIVATE stringify GTest::gtest GTest::gtest_main GTest::gmock)
 gtest_discover_tests(tests_with_mocks)
+
+add_executable(dry dry.cpp)
+target_link_libraries(dry PRIVATE GTest::gtest GTest::gtest_main)
+add_executable(dry_parameterized dry_parameterized.cpp)
+target_link_libraries(dry_parameterized PRIVATE GTest::gtest GTest::gtest_main)
+add_executable(custom custom.cpp)
+target_link_libraries(custom PRIVATE /opt/homebrew/lib/libfmt.a GTest::gtest GTest::gtest_main)
+add_executable(mocking mocking.cpp)
+target_link_libraries(mocking PRIVATE GTest::gtest GTest::gmock GTest::gtest_main)
